--- a/doc/CHANGES-8.1
+++ b/doc/CHANGES-8.1
@@ -1,4 +1,4 @@
-# $NetBSD: CHANGES-8.1,v 1.1.2.125 2019/04/07 11:02:13 martin Exp $
+# $NetBSD: CHANGES-8.1,v 1.1.2.126 2019/04/07 13:48:23 martin Exp $
 
 A complete list of changes from the NetBSD 8.0 release to the NetBSD 8.1
 release:
@@ -2821,4 +2821,9 @@ sys/dev/ic/msm6242b.c				1.4
 
 	Remove misplaced semicolon.
 	[rin, ticket #1227]
+
+sys/dev/pci/if_bge.c				1.328
+
+	Fix ASIC revision check.
+	[bouyer, ticket #1228]
 
