--- a/doc/CHANGES-8.1
+++ b/doc/CHANGES-8.1
@@ -1,4 +1,4 @@
-# $NetBSD: CHANGES-8.1,v 1.1.2.149 2019/05/31 02:49:45 msaitoh Exp $
+# $NetBSD: CHANGES-8.1,v 1.1.2.150 2019/05/31 08:12:28 martin Exp $
 
 A complete list of changes from the NetBSD 8.0 release to the NetBSD 8.1
 release:
@@ -3226,3 +3226,15 @@ sys/arch/sparc64/sparc64/db_trace.c		1.51-1.53
 
 	Fix kernel debugger stack trace on sparc64.
 	[martin, ticket #1274]
+
+external/mit/xorg/lib/libxcb/xcb.mk		1.5
+
+	Pick up xcb pkgconfig version automagically from the configure script
+	PACKAGE_VERSION.
+	[maya, ticket #1277]
+
+sys/dev/scsipi/scsipi_ioctl.c			1.72 (patch)
+
+	Use correct size when copying outgoing sense data.
+	[mlelstv, ticket #1278]
+
