Welcome to NetBSD 8.1!

--- a/doc/CHANGES-8.1
+++ b/doc/CHANGES-8.1
@@ -1,4 +1,4 @@
-# $NetBSD: CHANGES-8.1,v 1.1.2.150 2019/05/31 08:12:28 martin Exp $
+# $NetBSD: CHANGES-8.1,v 1.1.2.151 2019/05/31 08:43:59 martin Exp $
 
 A complete list of changes from the NetBSD 8.0 release to the NetBSD 8.1
 release:
@@ -3238,3 +3238,7 @@ sys/dev/scsipi/scsipi_ioctl.c			1.72 (patch)
 	Use correct size when copying outgoing sense data.
 	[mlelstv, ticket #1278]
 
+external/gpl2/groff/tmac/mdoc.local		(manually adjusted)
+sys/sys/param.h					(manually adjusted)
+
+	Welcome to 8.1!
