--- a/libexec/httpd/CHANGES
+++ b/libexec/httpd/CHANGES
@@ -1,4 +1,24 @@
-$NetBSD: CHANGES,v 1.25.4.2 2018/11/28 19:50:37 martin Exp $
+$NetBSD: CHANGES,v 1.25.4.3 2019/06/12 10:32:00 martin Exp $
+
+changes in bozohttpd 20190228:
+	o  extend timeout facility to ssl and stop servers hanging forever
+	   if the client never sends anything.  reported by Steffen in netbsd
+	   PR#50655.
+	o  don't display special files in the directory index.  they aren't
+	   served, but links to them are generated.
+	o  fix CGI '+' parameter handling, some error checking, and a double
+	   free.  from rajeev_v_pillai@yahoo.com
+	o  more directory indexing clean up.  from rajeev_v_pillai@yahoo.com
+
+changes in bozohttpd 20181215:
+	o  fix .htpasswd bypass for authenticated users.  reported by JP,
+	   from leot@netbsd.org
+	o  avoid possible null dereference when receiving a big request that
+	   timeout.  reported by maya@netbsd.org, from leot@netbsd.org
+	o  fix handling of -T option, from leot@netbsd.org
+	o  cleanups and portability improvements, from maya@netbsd.org
+	o  change directory indexing to use html tables, from
+	   rajeev_v_pillai@yahoo.com
 
 changes in bozohttpd 20181125:
 	o  fixes for option parsing introduced in bozohttpd 20181123
@@ -293,7 +313,7 @@ changes in bozohttpd 5.07 (20010610):
 	- add many new content-types, now support most common ones
 
 changes in bozohttpd 5.06 (20000825):
-	- add IPv6 suppor from itojun@iijlab.net
+	- add IPv6 support from itojun@iijlab.net
 	- man page fixes from jlam@netbsd.org
 
 changes in bozohttpd 5.05 (20000815):
