--- a/libexec/httpd/bozohttpd.8
+++ b/libexec/httpd/bozohttpd.8
@@ -1,8 +1,8 @@
-.\"	$NetBSD: bozohttpd.8,v 1.65.4.1 2018/11/24 17:13:51 martin Exp $
+.\"	$NetBSD: bozohttpd.8,v 1.65.4.2 2019/06/12 10:32:00 martin Exp $
 .\"
 .\"	$eterna: bozohttpd.8,v 1.101 2011/11/18 01:25:11 mrg Exp $
 .\"
-.\" Copyright (c) 1997-2018 Matthew R. Green
+.\" Copyright (c) 1997-2019 Matthew R. Green
 .\" All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
@@ -26,7 +26,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd November 19, 2018
+.Dd February 27, 2019
 .Dt BOZOHTTPD 8
 .Os
 .Sh NAME
@@ -245,11 +245,13 @@ to
 The valid values of
 .Ar type
 are
+.Dq ssl timeout ,
 .Dq initial timeout ,
 .Dq header timeout ,
 and
 .Dq request timeout .
-The default values are 30 seconds, 10 seconds and 600 seconds, respectively.
+The default values are 30 seconds, 30 seconds, 10 seconds and 600 seconds,
+respectively.
 .It Fl t Ar chrootdir
 Makes
 .Nm
@@ -477,9 +479,7 @@ if a
 .Pa .bzdirect
 file is found (contents are irrelevant)
 .Nm
-will allow direct access even with the
-.Fl r
-option.
+will allow direct access.
 If a
 .Pa .bzredirect
 symbolic link is found,
@@ -599,7 +599,7 @@ The focus has always been simplicity and security, with minimal features
 and regular code audits.
 This manual documents
 .Nm
-version 20181123.
+version 20190116.
 .Sh AUTHORS
 .An -nosplit
 .Nm
@@ -610,13 +610,13 @@ was written by
 The large list of contributors includes:
 .Bl -dash
 .It
-.An Marc Balmer
-.Aq Mt mbalmer@NetBSD.org
-added Lua support for dynamic content creation
-.It
 .An Christoph Badura
 .Aq Mt bad@bsd.de
 provided Range: header support
+.It
+.An Marc Balmer
+.Aq Mt mbalmer@NetBSD.org
+added Lua support for dynamic content creation
 .It
 .An Sean Boudreau
 .Aq Mt seanb@NetBSD.org
@@ -634,7 +634,7 @@ provided cgi-bin support fixes, and more
 .Aq Mt agc@NetBSD.org
 cleaned up many internal interfaces, made
 .Nm
-linkable as a library and provided the Lua binding.
+linkable as a library and provided the Lua binding
 .It
 .An DEGROOTE Arnaud
 .Aq Mt degroote@NetBSD.org
@@ -644,13 +644,13 @@ provided a fix for daemon mode
 .Aq Mt ad@NetBSD.org
 provided directory indexing support
 .It
-.An Per Ekman
-.Aq Mt pek@pdc.kth.se
-provided a fix for a minor (non-security) buffer overflow condition
-.It
 .An Roland Dowdeswell
 .Aq Mt elric@NetBSD.org
 added support for serving gzipped files and better SSL handling
+.It
+.An Per Ekman
+.Aq Mt pek@pdc.kth.se
+provided a fix for a minor (non-security) buffer overflow condition
 .It
 .An Jun-ichiro itojun Hagino, KAME
 .Aq Mt itojun@iijlab.net
@@ -690,7 +690,7 @@ provided many fixes and enhancements for the man page
 fixed memory leaks, various issues with userdir support,
 information disclosure issues, added support for using CGI handlers
 with directory indexing, found several security issues and provided
-various other fixes.
+various other fixes
 .It
 .An Arnaud Lacombe
 .Aq Mt alc@NetBSD.org
@@ -708,7 +708,7 @@ provided a cgi-bin fix
 .Aq Mt jmmv@NetBSD.org
 Added the
 .Fl P
-option (pidfile support) and provided some man page fixes.
+option (pidfile support) and provided some man page fixes
 .It
 .An Luke Mewburn
 .Aq Mt lukem@NetBSD.org
@@ -717,7 +717,8 @@ HTTP basic authorization support and much code clean up
 .It
 .An Rajeev V. Pillai
 .Aq Mt rajeev_v_pillai@yahoo.com
-provided several fixes for virtual hosting
+provided several fixes for virtual hosting and directory indexing and
+fixes for CGI
 .It
 .An Jeremy C. Reed
 .Aq Mt reed@NetBSD.org
@@ -739,11 +740,11 @@ provided minor compile fixes and a CGI content map fix
 .Aq Mt rumble@ephemeral.org
 provided the
 .Fl V
-option.
+option
 .It
 .An Thor Lancelot Simon
 .Aq Mt tls@NetBSD.org
-enhanced cgi-bin support.
+enhanced cgi-bin support
 .It
 .An Joerg Sonnenberger
 .Aq Mt joerg@NetBSD.org
@@ -760,7 +761,7 @@ provided http authorization fixes
 .Aq Mt xs@kittenz.org
 provided chroot and change-to-user support, and other various fixes
 .It
-Coyote Point provided various CGI fixes.
+Coyote Point provided various CGI fixes
 .El
 .Pp
 There are probably others I have forgotten (let me know if you care)
