--- a/doc/CHANGES-8.2
+++ b/doc/CHANGES-8.2
@@ -1,4 +1,4 @@
-# $NetBSD: CHANGES-8.2,v 1.1.2.2 2019/06/02 08:30:16 martin Exp $
+# $NetBSD: CHANGES-8.2,v 1.1.2.3 2019/06/12 10:40:13 martin Exp $
 
 A complete list of changes from the NetBSD 8.1 release to the NetBSD 8.2
 release:
@@ -13,4 +13,59 @@ sys/arch/x86/x86/spectre.c			1.29
 
 	Fix boot on old CPUs.
 	[maxv, ticket #1279]
+
+sys/arch/amd64/conf/GENERIC			1.528
+sys/arch/i386/conf/GENERIC			1.1207
+sys/arch/x86/include/autoconf.h			1.6
+sys/arch/x86/pci/pci_machdep.c			1.86
+sys/arch/x86/x86/consinit.c			1.29
+sys/arch/x86/x86/hyperv.c			1.2-1.4
+sys/arch/x86/x86/hypervvar.h			1.1
+sys/arch/x86/x86/identcpu.c			1.91
+sys/arch/x86/x86/x86_autoconf.c			1.78
+sys/arch/xen/x86/autoconf.c			1.23
+sys/dev/acpi/vmbus_acpi.c			1.2
+sys/dev/hyperv/files.hyperv			1.2
+sys/dev/hyperv/genfb_vmbus.c			1.1
+sys/dev/hyperv/genfb_vmbusvar.h			1.1
+sys/dev/hyperv/hvkbd.c				1.1
+sys/dev/hyperv/hvkbdvar.h			1.1
+sys/dev/hyperv/hyperv_common.c			1.2
+sys/dev/hyperv/hypervvar.h			1.2
+sys/dev/hyperv/vmbus.c				1.3
+sys/dev/hyperv/vmbusvar.h			1.2
+sys/dev/wscons/wsconsio.h			1.123
+
+	Add Hyper-V Gen.2 VM framebuffer console support.
+	[nonaka, ticket #1280]
+
+libexec/httpd/CHANGES				1.31-1.40
+libexec/httpd/Makefile				1.28
+libexec/httpd/auth-bozo.c			1.23-1.24
+libexec/httpd/bozohttpd.8			1.75-1.79
+libexec/httpd/bozohttpd.c			1.100-1.113
+libexec/httpd/bozohttpd.h			1.58-1.60
+libexec/httpd/cgi-bozo.c			1.46-1.48
+libexec/httpd/daemon-bozo.c			1.20-1.21
+libexec/httpd/dir-index-bozo.c			1.29-1.32
+libexec/httpd/ssl-bozo.c			1.26
+libexec/httpd/testsuite/Makefile		1.12-1.13
+libexec/httpd/testsuite/t11.out			1.2
+libexec/httpd/testsuite/test-bigfile		1.6
+libexec/httpd/testsuite/test-simple		1.6
+
+	Don't display special files in the directory index.
+	Use html tables for directory index.
+	Don't include "index.html" in html headers.
+	Fix CGI '+' param and error handling.
+	Remove unused parameter to daemon_poll_err().
+	Avoid sign extension in % handling
+	Fix a few problems pointed out by clang static analyzer.
+	Add ssl specific timeout value (30s).---
+	Fix handling of bozo_set_timeout() timeouts (and `-T' option parsing).
+	Avoid .htpasswd exposure to authenticated users when .htpasswd is
+	in the slashdir too.
+	Avoid possible NULL dereference when sending a big request that timeout.
+	Avoid an assertion failure when using cgihandler (-C option).
+	[mrg, ticket #1281}
 
