--- a/doc/CHANGES-8.2
+++ b/doc/CHANGES-8.2
@@ -1,4 +1,4 @@
-# $NetBSD: CHANGES-8.2,v 1.1.2.31 2019/09/01 17:15:34 martin Exp $
+# $NetBSD: CHANGES-8.2,v 1.1.2.32 2019/09/02 17:20:47 martin Exp $
 
 A complete list of changes from the NetBSD 8.1 release to the NetBSD 8.2
 release:
@@ -656,4 +656,175 @@ sys/dev/mii/ciphyreg.h				1.6
 	- Add CS8204, CS8244 VSC8211 and VSC8601 support from {Free,Open}BSD.
 	- KNF.
 	[msaitoh, ticket #1350]
+
+share/man/man1/cd.1				1.7-1.10
+share/man/man1/man1.x68k/bellctrl.1		1.14
+share/man/man1/wait.1				1.5
+share/man/man3/__arraycount.3			1.7
+share/man/man3/bitmap.3				1.10
+share/man/man3/bits.3				1.18
+share/man/man3/bitstring.3			1.18
+share/man/man3/fast_divide32.3			1.9
+share/man/man3/gcq.3				1.4
+share/man/man3/iso646.3				1.6
+share/man/man3/queue.3				1.57
+share/man/man3/tree.3				1.12
+share/man/man4/acpilid.4			1.8
+share/man/man4/agp.4				1.17
+share/man/man4/ahc.4				1.34
+share/man/man4/ahd.4				1.6
+share/man/man4/ai.4				1.9
+share/man/man4/amr.4				1.15
+share/man/man4/ath.4				1.32
+share/man/man4/audio.4				1.80
+share/man/man4/bio.4				1.13
+share/man/man4/bluetooth.4			1.20
+share/man/man4/bpf.4				1.56
+share/man/man4/btsco.4				1.13
+share/man/man4/cfb.4				1.5
+share/man/man4/chipsfb.4			1.6
+share/man/man4/cmpci.4				1.9
+share/man/man4/crypto.4				1.26
+share/man/man4/ddb.4				1.167
+share/man/man4/dge.4				1.11
+share/man/man4/ec.4				1.14
+share/man/man4/edc.4				1.12
+share/man/man4/envsys.4				1.51
+share/man/man4/etherip.4			1.8
+share/man/man4/gpiosim.4			1.6
+share/man/man4/gre.4				1.45
+share/man/man4/ieee80211.4			1.5
+share/man/man4/iop.4				1.22
+share/man/man4/ip.4				1.37
+share/man/man4/ip6.4				1.31
+share/man/man4/isa.4				1.46
+share/man/man4/isdntel.4			1.8
+share/man/man4/isic.4				1.18
+share/man/man4/jme.4				1.7
+share/man/man4/man4.alpha/ttwoga.4		1.6
+share/man/man4/man4.alpha/ttwopci.4		1.6
+share/man/man4/man4.amiga/grf.4			1.7
+share/man/man4/man4.amiga/mfcs.4		1.8
+share/man/man4/man4.atari/rtc.4			1.8
+share/man/man4/man4.dreamcast/aica.4		1.6
+share/man/man4/man4.hp300/dcl.4			1.13
+share/man/man4/man4.hppa/pdc.4			1.3
+share/man/man4/man4.i386/intro.4		1.31
+share/man/man4/man4.i386/ndis.4			1.6
+share/man/man4/man4.i386/pcibios.4		1.19
+share/man/man4/man4.sgimips/giopci.4		1.9
+share/man/man4/man4.sparc/intro.4		1.27
+share/man/man4/man4.sparc/magma.4		1.12
+share/man/man4/man4.sparc64/intro.4		1.5
+share/man/man4/man4.sun2/leds.4			1.10
+share/man/man4/man4.sun3/leds.4			1.13
+share/man/man4/man4.vax/ad.4			1.12
+share/man/man4/man4.vax/cons.4			1.12
+share/man/man4/man4.vax/dl.4			1.13
+share/man/man4/man4.vax/dn.4			1.12
+share/man/man4/man4.vax/hy.4			1.12
+share/man/man4/man4.vax/ix.4			1.17
+share/man/man4/mfb.4				1.5
+share/man/man4/mfi.4				1.12
+share/man/man4/midi.4				1.32
+share/man/man4/mpls.4				1.10
+share/man/man4/multicast.4			1.8
+share/man/man4/options.4			1.467
+share/man/man4/pad.4				1.6
+share/man/man4/pci.4				1.97
+share/man/man4/pim.4				1.5
+share/man/man4/plip.4				1.4
+share/man/man4/pppoe.4				1.39
+share/man/man4/radio.4				1.13
+share/man/man4/ral.4				1.12
+share/man/man4/route.4				1.31
+share/man/man4/sc.4				1.8
+share/man/man4/se.4				1.6
+share/man/man4/si.4				1.11
+share/man/man4/strip.4				1.16
+share/man/man4/termios.4			1.37
+share/man/man4/uftdi.4				1.20
+share/man/man4/ugen.4				1.32
+share/man/man4/unix.4				1.26
+share/man/man4/usb.4				1.106
+share/man/man4/userconf.4			1.13
+share/man/man4/utoppy.4				1.7
+share/man/man4/uyurex.4				1.6
+share/man/man4/we.4				1.19
+share/man/man4/ym.4				1.19
+share/man/man4/zyd.4				1.5
+share/man/man5/ar.5				1.9
+share/man/man5/boot.cfg.5			1.28
+share/man/man5/capfile.5			1.4
+share/man/man5/core.5				1.31
+share/man/man5/genassym.cf.5			1.13
+share/man/man5/ld.so.conf.5			1.21
+share/man/man5/link.5				1.24
+share/man/man5/locale.alias.5			1.3
+share/man/man5/mixerctl.conf.5			1.7
+share/man/man5/nsswitch.conf.5			1.29
+share/man/man5/passwd.5				1.33
+share/man/man5/passwd.conf.5			1.11
+share/man/man5/ranlib.5				1.7
+share/man/man5/stab.5				1.15
+share/man/man5/veriexec.5			1.8
+share/man/man7/ascii.7				1.8
+share/man/man7/hier.7				1.123
+share/man/man7/operator.7			1.12
+share/man/man7/release.7			1.37
+share/man/man7/security.7			1.15
+share/man/man7/sysctl.7				1.114
+share/man/man8/afterboot.8			1.58
+share/man/man8/compat_freebsd.8			1.18
+share/man/man8/compat_linux.8			1.38
+share/man/man8/compat_sunos.8			1.21
+share/man/man8/compat_svr4.8			1.27
+share/man/man8/compat_ultrix.8			1.21
+share/man/man8/diskless.8			1.32
+share/man/man8/man8.acorn26/boot26.8		1.8
+share/man/man8/man8.alpha/boot.8		1.16
+share/man/man8/man8.alpha/mkbootimage.8		1.9
+share/man/man8/man8.amiga/installboot.8		1.23
+share/man/man8/man8.atari/ahdilabel.8		1.14
+share/man/man8/man8.cobalt/boot.8		1.10
+share/man/man8/man8.hppa/boot.8			1.2
+share/man/man8/man8.macppc/boot.8		1.8
+share/man/man8/man8.macppc/ofwboot.8		1.14
+share/man/man8/man8.mvme68k/boot.8		1.9
+share/man/man8/man8.sparc/boot.8		1.32
+share/man/man8/man8.vax/boot.8			1.14
+share/man/man8/man8.vax/drtest.8		1.16
+share/man/man8/man8.vax/format.8		1.14
+share/man/man8/man8.x86/boot.8			1.12
+share/man/man8/man8.x86/mbr.8			1.4
+share/man/man8/sysinst.8			1.6
+share/man/man9/man9.i386/bioscall.9		1.10
+
+	Remove workaround for ancient HTML generation code.
+	Use EXIT STATUS and .Ex.
+	cd(1):
+	 - direct reader to shell documentation generally, rather than csh(1)
+	   specifically.
+	 - mention variables OLDPWD and PWD.
+	 - Move the text that explains that cd(1) is a shell built-in to the
+	   very beginning.
+	 - Improve formatting.
+	[sevan, ticket #1351]
+
+share/man/man1/man1.atari/edahdi.1		1.12
+share/man/man1/man1.atari/msconfig.1		1.9
+share/man/man1/man1.x68k/aout2hux.1		1.6
+share/man/man1/man1.x68k/bellctrl.1		1.16
+share/man/man1/man1.x68k/bellctrl.1		1.17
+share/man/man1/man1.x68k/loadfont.1		1.10
+share/man/man1/man1.x68k/loadkmap.1		1.7
+share/man/man1/man1.x68k/palette.1		1.7
+share/man/man1/man1.x68k/tvctrl.1		1.6
+share/man/man4/null.4				1.5,1.6
+share/man/man8/man8.next68k/boot.8		1.5
+share/man/man9/arp.9				1.27
+
+	Provide history.
+	Improve grammar and readability. Minor cosmetics.
+	[sevan, tickets #1352 - #1364]
 
