--- a/doc/CHANGES-8.2
+++ b/doc/CHANGES-8.2
@@ -1,4 +1,4 @@
-# $NetBSD: CHANGES-8.2,v 1.1.2.32 2019/09/02 17:20:47 martin Exp $
+# $NetBSD: CHANGES-8.2,v 1.1.2.33 2019/09/03 12:21:15 martin Exp $
 
 A complete list of changes from the NetBSD 8.1 release to the NetBSD 8.2
 release:
@@ -827,4 +827,27 @@ share/man/man9/arp.9				1.27
 	Provide history.
 	Improve grammar and readability. Minor cosmetics.
 	[sevan, tickets #1352 - #1364]
+
+sys/conf/files					1.1238
+sys/crypto/nist_ctr_drbg/files.nist_ctr_drbg	delete
+sys/crypto/nist_ctr_drbg/nist_ctr_aes_rijndael.h delete
+sys/crypto/nist_ctr_drbg/nist_ctr_drbg.c	delete
+sys/crypto/nist_ctr_drbg/nist_ctr_drbg.h	delete
+sys/crypto/nist_ctr_drbg/nist_ctr_drbg_aes128.h	delete
+sys/crypto/nist_ctr_drbg/nist_ctr_drbg_aes256.h	delete
+sys/crypto/nist_ctr_drbg/nist_ctr_drbg_config.h	delete
+sys/crypto/nist_hash_drbg/files.nist_hash_drbg	1.1
+sys/crypto/nist_hash_drbg/nist_hash_drbg.c	1.1
+sys/crypto/nist_hash_drbg/nist_hash_drbg.h	1.1
+sys/dev/rndpseudo.c				1.38
+sys/kern/subr_cprng.c				1.31
+sys/rump/kern/lib/libcrypto/Makefile		1.5
+sys/rump/librump/rumpkern/Makefile.rumpkern	1.176
+sys/sys/cprng.h					1.13-1.15
+
+	cprng.h: use static __inline for consistency with other include
+	headers and remove an unused function.
+
+	Switch from NIST CTR_DRBG with AES to NIST Hash_DRBG with SHA-256.
+	[riastradh, ticket #1365]
 
