Ammend ticket #1380 for additional changes

--- a/doc/CHANGES-8.2
+++ b/doc/CHANGES-8.2
@@ -1,4 +1,4 @@
-# $NetBSD: CHANGES-8.2,v 1.1.2.38 2019/09/18 17:32:34 martin Exp $
+# $NetBSD: CHANGES-8.2,v 1.1.2.39 2019/09/21 18:38:19 martin Exp $
 
 A complete list of changes from the NetBSD 8.1 release to the NetBSD 8.2
 release:
@@ -1044,6 +1044,7 @@ sys/netinet6/ip6_input.c			1.209 (patch)
 	[bouyer, ticket #1378]
 
 sys/arch/x86/acpi/acpi_machdep.c		1.27,1.28
+sys/arch/xen/include/xen-public/platform.h	(apply patch)
 
 	Attempt to obtain ACPI RSDP from the hypervisor for Xen PV.
 	[manu, ticket #1380]
