--- a/doc/CHANGES-8.2
+++ b/doc/CHANGES-8.2
@@ -1,4 +1,4 @@
-# $NetBSD: CHANGES-8.2,v 1.1.2.40 2019/09/23 06:57:53 martin Exp $
+# $NetBSD: CHANGES-8.2,v 1.1.2.41 2019/09/23 14:37:34 martin Exp $
 
 A complete list of changes from the NetBSD 8.1 release to the NetBSD 8.2
 release:
@@ -1043,9 +1043,8 @@ sys/netinet6/ip6_input.c			1.209 (patch)
 	m_pullup() it when needed.
 	[bouyer, ticket #1378]
 
-sys/arch/x86/acpi/acpi_machdep.c		1.27,1.28
+sys/arch/x86/acpi/acpi_machdep.c		1.27,1.28 (adapted)
 sys/arch/xen/include/xen-public/platform.h	(apply patch)
-sys/arch/xen/conf/files.xen			(parts of 1.178)
 
 	Attempt to obtain ACPI RSDP from the hypervisor for Xen PV.
 	[manu, ticket #1380]
