--- a/share/man/man4/ixv.4
+++ b/share/man/man4/ixv.4
@@ -1,4 +1,4 @@
-.\"	$NetBSD: ixv.4,v 1.3.2.2 2018/05/12 10:35:45 martin Exp $
+.\"	$NetBSD: ixv.4,v 1.3.2.3 2019/09/26 18:19:27 martin Exp $
 .\"
 .\" Copyright (c) 2018 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -27,7 +27,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd May 9, 2018
+.Dd September 5, 2019
 .Dt IXV 4
 .Os
 .Sh NAME
@@ -59,6 +59,23 @@ The
 .Nm
 driver was written by
 .An Intel Corporation Aq Mt freebsdnic@mailbox.intel.com .
+.Sh BUGS
+The following event counters are not cleared by
+.Dv SIOCZIFDATA
+because the corresponding registers are read only and not cleared on read:
+.Pp
+.Bl -item -offset indent -compact
+.It
+Good Packets Received
+.It
+Good Octets Received
+.It
+Multicast Packets Received
+.It
+Good Packets Transmitted
+.It
+Good Octets Transmitted
+.El
 .Sh BUGS
 VLAN over
 .Nm
