--- a/doc/CHANGES-8.2
+++ b/doc/CHANGES-8.2
@@ -1,4 +1,4 @@
-# $NetBSD: CHANGES-8.2,v 1.1.2.44 2019/09/26 18:25:17 martin Exp $
+# $NetBSD: CHANGES-8.2,v 1.1.2.45 2019/09/27 09:49:45 martin Exp $
 
 A complete list of changes from the NetBSD 8.1 release to the NetBSD 8.2
 release:
@@ -1190,4 +1190,24 @@ sys/dev/ic/nvme.c				1.46
 
 	nvme(4): don't attach the device if namespace is not found.
 	[nonaka, ticket #1390]
+
+sys/arch/i386/stand/efiboot/bootia32/multiboot32.S 1.2
+
+	Fix multiboot32 argument usage.
+	[manu, ticket #1391]
+
+sys/arch/i386/stand/efiboot/boot.c		1.17
+sys/arch/i386/stand/efiboot/conf.c		1.3
+sys/arch/i386/stand/efiboot/dev_net.c		1.3
+sys/arch/i386/stand/efiboot/devopen.c		1.8
+sys/arch/i386/stand/efiboot/devopen.h		1.5
+
+	x86 efiboot: pass a filename to BOOTP and parse a DHCP server
+	provided filename.
+	[nonaka, ticket #1392]
+
+usr.sbin/bta2dpd/bta2dpd/sbc_encode.c		1.10
+
+	Fix off by one in sbc encoder.
+	[nat, ticket #1393]
 
