--- a/doc/CHANGES-8.2
+++ b/doc/CHANGES-8.2
@@ -1,4 +1,4 @@
-# $NetBSD: CHANGES-8.2,v 1.1.2.45 2019/09/27 09:49:45 martin Exp $
+# $NetBSD: CHANGES-8.2,v 1.1.2.46 2019/09/28 07:48:30 martin Exp $
 
 A complete list of changes from the NetBSD 8.1 release to the NetBSD 8.2
 release:
@@ -1210,4 +1210,18 @@ usr.sbin/bta2dpd/bta2dpd/sbc_encode.c		1.10
 
 	Fix off by one in sbc encoder.
 	[nat, ticket #1393]
+
+external/mit/expat/lib/libexpat/Makefile	1.3,1.4
+
+	More portable way to extract PACKAGE_VERSION.
+	[maya, ticket #1394]
+
+sys/netbt/hci.h					1.46
+sys/netbt/hci_event.c				1.26
+
+	When encrypted connections are configured, verify that the encryption
+	key length has a minimum size when the adaptor supports that.
+	This addresses the 'Key Negotiation of Bluetooth' attack,
+	CVE-2019-9506.
+	[plunky, ticket #1395]
 
